# meal-planning-rust

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DESIGN_SYSTEM.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
.sqlx/: query-0a202c144febf20219e580cbb38b1bbeecbdc9ff1363b202816e3a028180ae99.json  query-8ecc3ba0b0b988e44d1075364ee64d5bc1c1d23a896fbd54e08e729880ff7497.json
locales/: cz.ftl  en.ftl
migrations/: 001_create_categories.sql  002_create_ingredients.sql  003_create_recipes.sql  004_create_camps.sql  005_create_meal_plans.sql  006_remove_planned_meals_unique.sql
source_data/: ingredients.yaml  recipes.yaml
src/: app.rs  auth.rs  db.rs  lib.rs  main.rs
src/api/: camps.rs  categories.rs  ingredients.rs  meal_plans.rs  recipes.rs  reports.rs
src/components/: camp_manager.rs  category_manager.rs  ingredient_manager.rs  meal_planner.rs  mod.rs  nav.rs  recipe_editor.rs  report_generator.rs  searchable_select.rs
src/components/ui/: button.rs  form.rs  loading.rs  mod.rs  modal.rs  toast.rs
src/models/: camp.rs  category.rs  ingredient.rs  meal_plan.rs  mod.rs  recipe.rs  reports.rs
src/pages/: camps.rs  home.rs  ingredients.rs  login.rs  meal_planner.rs  mod.rs  recipes.rs  reports.rs
src/reports/: mod.rs
src/server_functions/: auth.rs  camps.rs  categories.rs  ingredients.rs  meal_plans.rs  mod.rs  recipes.rs  reports.rs
style/: main.css.source  output.css
